--- a/translations/kangyur/translations/049-004_toh109-the_sutra_on_the_mountain_gayasirsa.xml
+++ b/translations/kangyur/translations/049-004_toh109-the_sutra_on_the_mountain_gayasirsa.xml
@@ -42,7 +42,7 @@
                                         Lindsay</editor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 1.0.0 <date>2023</date>
+                <edition>v 1.0.1 <date>2023</date>
                 </edition>
             </editionStmt>
                         <publicationStmt status="1.a">
@@ -84,7 +84,7 @@
                                 </bibl>
                         </sourceDesc>
                         <notesStmt>
-                                <note type="lastUpdated" date-time="2023-04-14T20:25:32.639Z" user="admin">14/04/2023 20:25:32</note>
+                                <note type="lastUpdated" date-time="2023-04-14T20:36:48.475Z" user="admin">14/04/2023 20:36:48</note>
                                 <note type="updated" update="text-version" value="v 0.1.0" date-time="2019-10-08T07:42:51.906Z" user="andreas">v
                                         0.1.0</note>
                                 <note type="updated" update="translation-status" value="2.f" date-time="2020-01-27T13:10:59.245Z" user="mike">2.f</note>
@@ -130,6 +130,7 @@
                                         (update-publication-status)</note>
                             <note type="updated" update="translation-status" value="1.a" date-time="2023-04-14T20:25:28.293Z" user="martina-cotter">1.a</note>
                             <note type="updated" update="text-version" value="1.0.0" date-time="2023-04-14T20:25:28.293Z" user="martina-cotter">First published version</note>
+                            <note type="updated" update="text-version" value="1.0.1" date-time="2023-04-14T20:36:45.495Z" user="martina-cotter">Updated typo.</note>
                         </notesStmt>
                 </fileDesc>
         </teiHeader>
@@ -224,7 +225,7 @@
                                         <p tid="13">
                         <title xml:lang="en">Gayāśīrṣa Hill</title> is
                                                 also cited in Kamalaśīla’s <title xml:lang="en">Stages of Meditation</title> (<title xml:lang="Sa-Ltn">Bhāvanākrama</title>).<note place="end" xml:id="UT22084-049-004-13"> Toh
-                                                  3915–3917<ref inst="add note and bib entry once published" rend="pending" target="http://read.84000.co/translation/toh3915.html"/>
+                                                  3915–3917.<ref inst="add note and bib entry once published" rend="pending" target="http://read.84000.co/translation/toh3915.html"/>
                                                   <ref inst="add note and bib entry once published" rend="pending" target="http://read.84000.co/translation/toh3916.html"/>
                                                   <ref inst="add note and bib entry once published" rend="pending" target="http://read.84000.co/translation/toh3917.html"/> See the references given in the body of the
                                                   translation.</note> Through the influence of
