--- a/translations/kangyur/placeholders/043-012_toh75-the_sutra_of_gangottaras_questions.xml
+++ b/translations/kangyur/placeholders/043-012_toh75-the_sutra_of_gangottaras_questions.xml
@@ -4,20 +4,18 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">gang gA'i zhus pa'i mdo/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">gaṅgottaraparipṛcchāsūtra</title>
                 <title type="mainTitle" xml:lang="en">The Sūtra of Gaṅgottara's Questions</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa gang gA'i mchog gis zhus pa zhes bya ba theg pa chen po'i mdo</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">gaṅgottaraparipṛcchāsūtra</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">gang gA'i zhus pa'i mdo/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryagaṅgottara­paripṛcchā­nāmamahāyānasūtra</title>
-                <author ref="contributors.xml#team-40" role="translatorMain"/>
-            <author role="translatorEng" ref="contributors.xml#person-37">Peter Skilling</author>
+                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa gang gA'i mchog gis zhus pa zhes bya ba theg pa chen po'i mdo</title>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.2 <date>2019</date>
+                <edition>v 0.0.4 <date>2019</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="">
+            <publicationStmt status="3">
                 <idno xml:id="UT22084-043-012"/>
                 <date/>
             </publicationStmt>
@@ -33,9 +31,13 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-03-22T14:05:09.056Z" user="admin">22/03/2023 14:05:09</note>
-            
-<note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>    <note type="updated" update="translation-status" value="" date-time="2023-03-22T14:05:04.88Z" user="line-tofte"/>    <note type="updated" update="text-version" value="0.0.2" date-time="2023-03-22T14:05:04.88Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="lastUpdated" date-time="2023-04-17T07:13:47.922Z" user="admin">17/04/2023 07:13:47</note>
+                <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
+                <note type="updated" update="translation-status" value="" date-time="2023-03-22T14:05:04.88Z" user="line-tofte"/>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2023-03-22T14:05:04.88Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.3" date-time="2023-03-22T14:08:35.938Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="3" date-time="2023-04-17T07:13:43.571Z" user="line-tofte">3</note>
+                <note type="updated" update="text-version" value="0.0.4" date-time="2023-04-17T07:13:43.571Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
