--- a/translations/kangyur/placeholders/061-009_toh189-the_sutra_of_the_prophecy_concerning_brahmasri.xml
+++ b/translations/kangyur/placeholders/061-009_toh189-the_sutra_of_the_prophecy_concerning_brahmasri.xml
@@ -4,20 +4,18 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">tshangs pa'i dpal lung bstan pa'i mdo/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">brahmaśrīvyākaraṇasūtra</title>
                 <title type="mainTitle" xml:lang="en">The Sūtra of the Prophecy Concerning Brahmaśrī</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa tshangs pa'i dpal lung bstan pa zhes bya ba theg pa chen po'i mdo</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">brahmaśrīvyākaraṇasūtra</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">tshangs pa'i dpal lung bstan pa'i mdo/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryabrahmaśrīvyākaraṇa­nāmamahāyānasūtra</title>
-                <author ref="contributors.xml#team-40" role="translatorMain"/>
-            <author role="translatorEng" ref="contributors.xml#person-37">Peter Skilling</author>
+                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa tshangs pa'i dpal lung bstan pa zhes bya ba theg pa chen po'i mdo</title>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.2 <date>2019</date>
+                <edition>v 0.0.4 <date>2019</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="">
+            <publicationStmt status="3">
                 <idno xml:id="UT22084-061-009"/>
                 <date/>
             </publicationStmt>
@@ -33,9 +31,13 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-03-22T14:10:55.082Z" user="admin">22/03/2023 14:10:55</note>
-            
-<note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>    <note type="updated" update="translation-status" value="" date-time="2023-03-22T14:10:50.859Z" user="line-tofte"/>    <note type="updated" update="text-version" value="0.0.2" date-time="2023-03-22T14:10:50.859Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="lastUpdated" date-time="2023-04-17T07:14:57.892Z" user="admin">17/04/2023 07:14:57</note>
+                <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
+                <note type="updated" update="translation-status" value="" date-time="2023-03-22T14:10:50.859Z" user="line-tofte"/>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2023-03-22T14:10:50.859Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.3" date-time="2023-03-22T14:11:42.636Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="3" date-time="2023-04-17T07:14:53.544Z" user="line-tofte">3</note>
+                <note type="updated" update="text-version" value="0.0.4" date-time="2023-04-17T07:14:53.544Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
