--- a/translations/kangyur/translations/043-004_toh67_the_great_lions_roar.xml
+++ b/translations/kangyur/translations/043-004_toh67_the_great_lions_roar.xml
@@ -32,7 +32,7 @@
                                         Xiangzhi Yu, Jiayu Xie</sponsor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 1.0.1 <date>2023</date>
+                <edition>v 1.0.2 <date>2023</date>
                 </edition>
             </editionStmt>
                         <publicationStmt status="1.a">
@@ -76,7 +76,7 @@
                                 </bibl>
                         </sourceDesc>
                         <notesStmt>
-                                <note type="lastUpdated" date-time="2023-01-28T23:14:53.557Z" user="admin">28/01/2023 23:14:53</note>
+                                <note type="lastUpdated" date-time="2023-04-17T07:40:01.711Z" user="admin">17/04/2023 07:40:01</note>
                                 <note type="updated" update="text-version" value="v 0.1.0" date-time="2019-12-09T07:11:15.835Z" user="andreas">v
                                         0.1.0</note>
                                 <note type="updated" update="translation-status" value="2.g" date-time="2019-12-11T09:08:42.75Z" user="andreas">2.g</note>
@@ -121,6 +121,7 @@
                             <note type="updated" update="translation-status" value="1.a" date-time="2023-01-26T16:58:26.108Z" user="martina-cotter">1.a</note>
                             <note type="updated" update="text-version" value="1.0.0" date-time="2023-01-26T16:58:26.108Z" user="martina-cotter">First published version.</note>
                             <note type="updated" update="text-version" value="1.0.1" date-time="2023-01-28T23:14:50.705Z" user="andre">Glossary matching revised - activated in CG</note>
+                            <note type="updated" update="text-version" value="1.0.2" date-time="2023-04-17T07:39:58.773Z" user="sameer">Included in App v 3.0</note>
                         </notesStmt>
                 </fileDesc>
         </teiHeader>
@@ -163,7 +164,8 @@
                                         supervision of 84000: Translating the Words of the
                                         Buddha.</p>
                                 <lb/>
-                                <p tid="7">The generous sponsorship of Ting Xie, Guowen Xie, Xiangzhi Yu, and Jiayu Xie, which helped make the work on this translation possible, is most gratefully acknowledged.</p>
+                                <p tid="7">The generous sponsorship of Ting Xie, Guowen Xie, Xiangzhi Yu, and Jiayu Xie, 
+                                        which helped make the work on this translation possible, is most gratefully acknowledged.</p>
                         </div>
                         <div type="introduction">
                                 <head type="introduction" tid="8">Introduction</head>
