--- a/translations/kangyur/translations/043-004_toh67_the_great_lions_roar.xml
+++ b/translations/kangyur/translations/043-004_toh67_the_great_lions_roar.xml
@@ -32,10 +32,10 @@
                                         Xiangzhi Yu, Jiayu Xie</sponsor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 1.0.2 <date>2023</date>
+                <edition>v 1.0.3 <date>2023</date>
                 </edition>
             </editionStmt>
-                        <publicationStmt status="1.a">
+                        <publicationStmt status="1">
                 <publisher>
                     <name>84000: Translating the Words of the Buddha</name>
                                         is a global non-profit initiative to translate all the
@@ -76,7 +76,7 @@
                                 </bibl>
                         </sourceDesc>
                         <notesStmt>
-                                <note type="lastUpdated" date-time="2023-04-17T07:40:01.711Z" user="admin">17/04/2023 07:40:01</note>
+                                <note type="lastUpdated" date-time="2023-04-17T07:45:11.129Z" user="admin">17/04/2023 07:45:11</note>
                                 <note type="updated" update="text-version" value="v 0.1.0" date-time="2019-12-09T07:11:15.835Z" user="andreas">v
                                         0.1.0</note>
                                 <note type="updated" update="translation-status" value="2.g" date-time="2019-12-11T09:08:42.75Z" user="andreas">2.g</note>
@@ -122,6 +122,8 @@
                             <note type="updated" update="text-version" value="1.0.0" date-time="2023-01-26T16:58:26.108Z" user="martina-cotter">First published version.</note>
                             <note type="updated" update="text-version" value="1.0.1" date-time="2023-01-28T23:14:50.705Z" user="andre">Glossary matching revised - activated in CG</note>
                             <note type="updated" update="text-version" value="1.0.2" date-time="2023-04-17T07:39:58.773Z" user="sameer">Included in App v 3.0</note>
+                            <note type="updated" update="translation-status" value="1" date-time="2023-04-17T07:45:06.703Z" user="sameer">1</note>
+                            <note type="updated" update="text-version" value="1.0.3" date-time="2023-04-17T07:45:06.703Z" user="sameer">Auto (update-publication-status)</note>
                         </notesStmt>
                 </fileDesc>
         </teiHeader>
