--- a/translations/kangyur/translations/059-009_toh166-the_sutra_of_the_questions_of_rastrapala.xml
+++ b/translations/kangyur/translations/059-009_toh166-the_sutra_of_the_questions_of_rastrapala.xml
@@ -27,10 +27,10 @@
                                 <editor role="finalReviewer" ref="eft:person-74">Ryan Damron</editor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 1.0.1 <date>2023</date>
+                <edition>v 1.0.2 <date>2023</date>
                 </edition>
             </editionStmt>
-                        <publicationStmt status="1.a">
+                        <publicationStmt status="1">
                 <publisher>
                     <name>84000: Translating the Words of the Buddha</name>
                                         is a global non-profit initiative to translate all the
@@ -69,7 +69,7 @@
                                 </bibl>
                         </sourceDesc>
                         <notesStmt>
-                                <note type="lastUpdated" date-time="2023-01-27T18:32:24.145Z" user="admin">27/01/2023 18:32:24</note>
+                                <note type="lastUpdated" date-time="2023-04-17T07:47:10.878Z" user="admin">17/04/2023 07:47:10</note>
                                 <note type="updated" update="translation-status" value="4" date-time="2022-02-10T10:39:23.55Z" user="line-tofte">4</note>
                                 <note type="updated" update="text-version" value="0.0.1" date-time="2022-02-10T10:39:23.55Z" user="line-tofte">0.0.1</note>
                                 <note type="updated" update="translation-status" value="3" date-time="2022-02-15T13:26:04.633Z" user="line-tofte">3</note>
@@ -112,6 +112,8 @@
                             <note type="updated" update="translation-status" value="1.a" date-time="2023-01-18T13:48:17.009Z" user="martina-cotter">1.a</note>
                             <note type="updated" update="text-version" value="1.0.0" date-time="2023-01-18T13:48:17.009Z" user="martina-cotter">First published version</note>
                             <note type="updated" update="text-version" value="1.0.1" date-time="2023-01-27T18:32:21.308Z" user="andre">Glossary matching revised, activated in CG</note>
+                            <note type="updated" update="translation-status" value="1" date-time="2023-04-17T07:47:06.489Z" user="sameer">1</note>
+                            <note type="updated" update="text-version" value="1.0.2" date-time="2023-04-17T07:47:06.489Z" user="sameer">Included in App v 3.0</note>
                         </notesStmt>
                 </fileDesc>
         </teiHeader>
