--- a/translations/kangyur/translations/090-045_toh601,884-the_incantation_of_the_reliquary.xml
+++ b/translations/kangyur/translations/090-045_toh601,884-the_incantation_of_the_reliquary.xml
@@ -27,10 +27,10 @@
         <editor role="TEImarkupEditor" ref="eft:person-381">Martina Cotter</editor>
       </titleStmt>
       <editionStmt>
-                <edition>v 1.1.1 <date>2023</date>
+                <edition>v 1.1.2 <date>2023</date>
                 </edition>
             </editionStmt>
-      <publicationStmt status="1.a">
+      <publicationStmt status="1">
                 <publisher>
                     <name>84000: Translating the Words of the Buddha</name> is a global non-profit
           initiative to translate all the Buddha’s words into modern languages, and to make them
@@ -70,7 +70,7 @@
         </bibl>
       </sourceDesc>
       <notesStmt>
-        <note type="lastUpdated" date-time="2023-02-07T13:14:47.623Z" user="admin">07/02/2023 13:14:47</note>
+        <note type="lastUpdated" date-time="2023-04-17T07:53:22.969Z" user="admin">17/04/2023 07:53:22</note>
         <note type="updated" update="translation-status" value="4" date-time="2021-10-25T12:26:35.738Z" user="line-tofte">4</note>
         <note type="updated" update="text-version" value="0.0.1" date-time="2021-10-25T12:26:35.738Z" user="line-tofte">0.0.1</note>
         <note type="updated" update="translation-status" value="3" date-time="2021-10-29T14:24:28.861Z" user="line-tofte">3</note>
@@ -110,6 +110,8 @@
           <note type="updated" update="text-version" value="1.0.1" date-time="2023-01-11T19:10:15.932Z" user="martina-cotter">Updated opening verses.</note>
           <note type="updated" update="text-version" value="1.0.2" date-time="2023-01-18T16:58:06.914Z" user="celso">Auto (remove-tid-from-back-list-items)</note>
           <note type="updated" update="text-version" value="1.1.1" date-time="2023-02-07T13:14:44.76Z" user="john">Edits to the introduction around the relationship of the text to the 'dri med rnam gnyis (510 and 599).</note>
+          <note type="updated" update="translation-status" value="1" date-time="2023-04-17T07:53:18.597Z" user="sameer">1</note>
+          <note type="updated" update="text-version" value="1.1.2" date-time="2023-04-17T07:53:18.597Z" user="sameer">Included in App v 3.0</note>
       </notesStmt>
     </fileDesc>
   </teiHeader>
