--- a/translations/kangyur/translations/072-011_toh311-the_sutra_teaching_the_eleven_perceptions.xml
+++ b/translations/kangyur/translations/072-011_toh311-the_sutra_teaching_the_eleven_perceptions.xml
@@ -32,7 +32,7 @@
                                 <editor role="finalReviewer" ref="eft:person-74">Ryan Damron</editor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 1.0.1 <date>2023</date>
+                <edition>v 1.0.2 <date>2023</date>
                 </edition>
             </editionStmt>
                         <publicationStmt status="1">
@@ -73,7 +73,7 @@
                                 </bibl>
                         </sourceDesc>
                         <notesStmt>
-                                <note type="lastUpdated" date-time="2023-03-13T16:40:33.685Z" user="admin">13/03/2023 16:40:33</note>
+                                <note type="lastUpdated" date-time="2023-04-17T07:57:03.122Z" user="admin">17/04/2023 07:57:03</note>
                                 <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated
                                         version increment</note>
                                 <note type="updated" update="translation-status" value="2.h" date-time="2021-10-19T08:19:26.558Z" user="line-tofte">2.h</note>
@@ -124,6 +124,7 @@
                             <note type="updated" update="text-version" value="1.0.0" date-time="2023-03-07T13:48:55.987Z" user="martina-cotter">First published version</note>
                             <note type="updated" update="translation-status" value="1" date-time="2023-03-13T16:40:29.291Z" user="andre">1</note>
                             <note type="updated" update="text-version" value="1.0.1" date-time="2023-03-13T16:40:29.291Z" user="andre">Glossary integration revised - activated in CG</note>
+                            <note type="updated" update="text-version" value="1.0.2" date-time="2023-04-17T07:57:00.215Z" user="sameer">Included in App v 3.1</note>
                         </notesStmt>
                 </fileDesc>
         </teiHeader>
