--- a/translations/kangyur/translations/072-038_toh338-classification_of_acts.xml
+++ b/translations/kangyur/translations/072-038_toh338-classification_of_acts.xml
@@ -24,10 +24,10 @@
         <sponsor ref="eft:sponsor-206">Late Ng Ah Chon, Late Lee Tiang Chuan, Lee Cheng Watt and family, Late Lee Cheng Boon &amp; family, Lee Boon Tee &amp; family, Lee Pheck Tiang &amp; family, Lee Pheck Choo and family, Lee Siang Choo &amp; family.</sponsor>
       </titleStmt>
       <editionStmt>
-                <edition>v 1.0.5 <date>2023</date>
+                <edition>v 1.0.6 <date>2023</date>
                 </edition>
             </editionStmt>
-      <publicationStmt status="1.a">
+      <publicationStmt status="1">
                 <publisher>
                     <name>84000: Translating the Words of the Buddha</name> is a global non-profit
           initiative to translate all the Buddha’s words into modern languages, and to make them
@@ -58,7 +58,7 @@
         </bibl>
       </sourceDesc>
       <notesStmt>
-        <note type="lastUpdated" date-time="2023-04-06T09:15:47.409Z" user="admin">06/04/2023 09:15:47</note>
+        <note type="lastUpdated" date-time="2023-04-17T07:59:08.92Z" user="admin">17/04/2023 07:59:08</note>
         <note type="updated" update="translation-status" value="2.e" date-time="2019-08-11T07:39:21.424Z" user="john">2.e</note>
         <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
         <note type="updated" update="translation-status" value="2.f" date-time="2020-01-27T13:12:53.765Z" user="mike">2.f</note>
@@ -98,6 +98,8 @@
           <note type="updated" update="text-version" value="1.0.3" date-time="2023-04-03T16:08:49.185Z" user="martina-cotter">Updated glossary entries.</note>
           <note type="updated" update="text-version" value="1.0.4" date-time="2023-04-04T09:16:44.235Z" user="andre">Glossary matching revised - activated in CG</note>
           <note type="updated" update="text-version" value="1.0.5" date-time="2023-04-06T09:15:44.509Z" user="andre">Definition of Bakula revised.</note>
+          <note type="updated" update="translation-status" value="1" date-time="2023-04-17T07:59:04.505Z" user="sameer">1</note>
+          <note type="updated" update="text-version" value="1.0.6" date-time="2023-04-17T07:59:04.505Z" user="sameer">Included in App v 3.1</note>
       </notesStmt>
     </fileDesc>
   </teiHeader>
