--- a/translations/kangyur/translations/089-002_toh545,892-spoken_by_manjusri_himself.xml
+++ b/translations/kangyur/translations/089-002_toh545,892-spoken_by_manjusri_himself.xml
@@ -26,14 +26,14 @@
                                 <editor role="finalReviewer" ref="eft:person-74">Ryan Damron</editor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 1.0.2 <date>2023</date>
+                <edition>v 1.0.3 <date>2023</date>
                 </edition>
             </editionStmt>
-                        <publicationStmt status="1.a">
-                                <publisher>
+                        <publicationStmt status="1">
+                <publisher>
                     <name>84000: Translating the Words of the Buddha</name> is a global non-profit initiative to translate all
                                         the Buddha’s words into modern languages, and to make them available to everyone. </publisher>
-                                <availability>
+                <availability>
                                         <licence>
                                                 <graphic url="http://i.creativecommons.org/l/by-nc-nd/2.0/88x31.png"/>
                                                 <p>This work is provided under the protection of a Creative Commons CC BY-NC-ND (Attribution -
@@ -42,11 +42,11 @@
                                                         full details, see the Creative Commons license.</p>
                                         </licence>
                                 </availability>
-                                <idno xml:id="UT22084-089-002"/>
-                                <note>An early mistake in the assigning of UT numbers within the 84000 project means that these ids diverge slightly
+                <idno xml:id="UT22084-089-002"/>
+                <note>An early mistake in the assigning of UT numbers within the 84000 project means that these ids diverge slightly
                                         from the standard logic.</note>
-                                <date>2023-03-22</date>
-                        </publicationStmt>
+                <date>2023-03-22</date>
+            </publicationStmt>
                         <sourceDesc>
                                 <bibl key="toh545" type="text">
                                         <ref>Toh 545</ref>
@@ -72,7 +72,7 @@
                                 </bibl>
                         </sourceDesc>
                         <notesStmt>
-                                <note type="lastUpdated" date-time="2023-04-14T11:59:40.659Z" user="admin">14/04/2023 11:59:40</note>
+                                <note type="lastUpdated" date-time="2023-04-17T08:02:21.404Z" user="admin">17/04/2023 08:02:21</note>
                                 <note type="updated" update="translation-status" value="3" date-time="2021-07-29T15:16:19.114Z" user="line-tofte">3</note>
                                 <note type="updated" update="text-version" value="0.0.1" date-time="2021-07-29T15:16:19.114Z" user="line-tofte">0.0.1</note>
                                 <note type="updated" update="text-version" value="0.0.2" date-time="2021-07-29T15:16:58.484Z" user="line-tofte">Auto
@@ -125,6 +125,8 @@
                                 <note type="updated" update="text-version" value="1.0.1" date-time="2023-03-29T09:54:15.984Z" user="andre">Glossary
                                         matching corrected and activated in CG</note>
                             <note type="updated" update="text-version" value="1.0.2" date-time="2023-04-14T11:59:37.755Z" user="laura">Some suggestions from TCTGNY and cleaned up markup/copy</note>
+                            <note type="updated" update="translation-status" value="1" date-time="2023-04-17T08:02:17.066Z" user="sameer">1</note>
+                            <note type="updated" update="text-version" value="1.0.3" date-time="2023-04-17T08:02:17.066Z" user="sameer">Included in App v 3.1</note>
                         </notesStmt>
                 </fileDesc>
         </teiHeader>
