--- a/translations/kangyur/translations/089-004_toh547-the_incantation_the_promise_of_manjusri.xml
+++ b/translations/kangyur/translations/089-004_toh547-the_incantation_the_promise_of_manjusri.xml
@@ -25,10 +25,10 @@
                 <editor role="finalReviewer" ref="eft:person-74">Ryan Damron</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.1 <date>2023</date>
+                <edition>v 1.0.2 <date>2023</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="1.a">
+            <publicationStmt status="1">
                 <publisher>
                     <name>84000: Translating the Words of the Buddha</name> is a global
                     non-profit initiative to translate all the Buddha’s words into modern languages,
@@ -60,7 +60,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-04-12T09:35:13.173Z" user="laura">12/04/2023 09:35:13</note>
+                <note type="lastUpdated" date-time="2023-04-17T08:08:29.744Z" user="admin">17/04/2023 08:08:29</note>
                 <note type="updated" update="translation-status" value="3" date-time="2021-07-29T15:29:28.196Z" user="line-tofte">3</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2021-07-29T15:29:28.196Z" user="line-tofte">0.0.1</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2021-07-29T15:29:50.789Z" user="line-tofte">Auto
@@ -100,6 +100,8 @@
                 <note type="updated" update="translation-status" value="1.a" date-time="2023-03-22T14:19:32.718Z" user="martina-cotter">1.a</note>
                 <note type="updated" update="text-version" value="1.0.0" date-time="2023-03-22T14:19:32.718Z" user="martina-cotter">First published version</note>
                 <note type="updated" update="text-version" value="1.0.1" date-time="2023-04-14T12:08:11.459Z" user="laura">Some suggestions from TCTGNY and cleaned up markup/copy</note>
+                <note type="updated" update="translation-status" value="1" date-time="2023-04-17T08:08:25.424Z" user="sameer">1</note>
+                <note type="updated" update="text-version" value="1.0.2" date-time="2023-04-17T08:08:25.424Z" user="sameer">Included in App v 3.1</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
