--- a/translations/kangyur/translations/089-006_toh549,895-the_incantation_manjusris_increasing_of_insight_and_intelligence.xml
+++ b/translations/kangyur/translations/089-006_toh549,895-the_incantation_manjusris_increasing_of_insight_and_intelligence.xml
@@ -23,14 +23,14 @@
                                 <editor role="finalReviewer" ref="eft:person-74">Ryan Damron</editor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 1.0.1 <date>2023</date>
+                <edition>v 1.0.2 <date>2023</date>
                 </edition>
             </editionStmt>
-                        <publicationStmt status="1.a">
-                                <publisher>
+                        <publicationStmt status="1">
+                <publisher>
                     <name>84000: Translating the Words of the Buddha</name> is a global non-profit initiative to translate all
                                         the Buddha’s words into modern languages, and to make them available to everyone. </publisher>
-                                <availability>
+                <availability>
                                         <licence>
                                                 <graphic url="http://i.creativecommons.org/l/by-nc-nd/2.0/88x31.png"/>
                                                 <p>This work is provided under the protection of a Creative Commons CC BY-NC-ND (Attribution -
@@ -39,11 +39,11 @@
                                                         full details, see the Creative Commons license.</p>
                                         </licence>
                                 </availability>
-                                <idno xml:id="UT22084-089-006"/>
-                                <note>An early mistake in the assigning of UT numbers within the 84000 project means that these ids diverge slightly
+                <idno xml:id="UT22084-089-006"/>
+                <note>An early mistake in the assigning of UT numbers within the 84000 project means that these ids diverge slightly
                                         from the standard logic.</note>
-                                <date>2023-03-22</date>
-                        </publicationStmt>
+                <date>2023-03-22</date>
+            </publicationStmt>
                         <sourceDesc>
                                 <bibl key="toh549" type="text">
                                         <ref>Toh 549</ref>
@@ -65,7 +65,7 @@
                                 </bibl>
                         </sourceDesc>
                         <notesStmt>
-                                <note type="lastUpdated" date-time="2023-04-14T12:13:27.235Z" user="admin">14/04/2023 12:13:27</note>
+                                <note type="lastUpdated" date-time="2023-04-17T08:18:37.79Z" user="admin">17/04/2023 08:18:37</note>
                                 <note type="updated" update="translation-status" value="3" date-time="2021-07-29T15:38:06.845Z" user="line-tofte">3</note>
                                 <note type="updated" update="text-version" value="0.0.1" date-time="2021-07-29T15:38:06.845Z" user="line-tofte">0.0.1</note>
                                 <note type="updated" update="text-version" value="0.0.2" date-time="2021-07-29T15:38:28.251Z" user="line-tofte">Auto
@@ -106,6 +106,8 @@
                                 <note type="updated" update="translation-status" value="1.a" date-time="2023-03-22T14:23:53.826Z" user="martina-cotter">1.a</note>
                                 <note type="updated" update="text-version" value="1.0.0" date-time="2023-03-22T14:23:53.826Z" user="martina-cotter">First published version</note>
                             <note type="updated" update="text-version" value="1.0.1" date-time="2023-04-14T12:13:24.272Z" user="laura">Some suggestions from TCTGNY and cleaned up markup/copy</note>
+                            <note type="updated" update="translation-status" value="1" date-time="2023-04-17T08:18:33.47Z" user="sameer">1</note>
+                            <note type="updated" update="text-version" value="1.0.2" date-time="2023-04-17T08:18:33.47Z" user="sameer">1.0.2</note>
                         </notesStmt>
                 </fileDesc>
         </teiHeader>
