--- a/translations/kangyur/translations/089-007_toh550,896-the_way_of_the_single_letter_mantra_of_manjusri.xml
+++ b/translations/kangyur/translations/089-007_toh550,896-the_way_of_the_single_letter_mantra_of_manjusri.xml
@@ -22,10 +22,10 @@
                 <editor role="finalReviewer" ref="eft:person-74">Ryan Damron</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.1 <date>2023</date>
+                <edition>v 1.0.2 <date>2023</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="1.a">
+            <publicationStmt status="1">
                 <publisher>
                     <name>84000: Translating the Words of the Buddha</name> is a global non-profit initiative to translate all the Buddha’s
                     words into modern languages, and to make them available to everyone. </publisher>
@@ -63,7 +63,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-04-14T12:15:48.521Z" user="admin">14/04/2023 12:15:48</note>
+                <note type="lastUpdated" date-time="2023-04-17T08:21:19.899Z" user="admin">17/04/2023 08:21:19</note>
                 <note type="updated" update="translation-status" value="3" date-time="2021-07-29T15:39:53.257Z" user="line-tofte">3</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2021-07-29T15:39:53.257Z" user="line-tofte">0.0.1</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2021-07-29T15:40:14.374Z" user="line-tofte">Auto
@@ -105,6 +105,8 @@
                 <note type="updated" update="text-version" value="1.0.0" date-time="2023-03-22T14:29:45.911Z" user="martina-cotter">First published
                     version</note>
                 <note type="updated" update="text-version" value="1.0.1" date-time="2023-04-14T12:15:45.486Z" user="laura">Some suggestions from TCTGNY and cleaned up markup/copy</note>
+                <note type="updated" update="translation-status" value="1" date-time="2023-04-17T08:21:15.594Z" user="sameer">1</note>
+                <note type="updated" update="text-version" value="1.0.2" date-time="2023-04-17T08:21:15.594Z" user="sameer">Included in App v 3.1</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
