--- a/translations/kangyur/placeholders/034-016_toh28-the_perfection_of_wisdom_for_samantabhadra.xml
+++ b/translations/kangyur/placeholders/034-016_toh28-the_perfection_of_wisdom_for_samantabhadra.xml
@@ -16,12 +16,13 @@
                 <editor role="reviser" ref="eft:person-406">Grégoire Langouët</editor>
                 <editor role="proofreader" ref="eft:person-406">Grégoire Langouët</editor>
                 <editor role="projectEditor" ref="eft:person-139">John Canti</editor>
+                <editor role="copyEditor" ref="eft:person-433">Dawn Collins</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.11 <date>2022</date>
+                <edition>v 0.0.13 <date>2022</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.e">
+            <publicationStmt status="2.d">
                 <idno xml:id="UT22084-034-016"/>
                 <date/>
             </publicationStmt>
@@ -37,7 +38,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-04-05T15:38:10.615Z" user="admin">05/04/2023 15:38:10</note>
+                <note type="lastUpdated" date-time="2023-04-17T08:49:14.629Z" user="admin">17/04/2023 08:49:14</note>
                 <note type="updated" update="translation-status" value="4" date-time="2022-03-08T09:47:31.921Z" user="line-tofte">4</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2022-03-08T09:47:31.921Z" user="line-tofte">0.0.1</note>
                 <note type="updated" update="translation-status" value="3" date-time="2022-05-18T13:04:32.358Z" user="line-tofte">3</note>
@@ -55,6 +56,9 @@
                 <note type="updated" update="text-version" value="0.0.10" date-time="2023-02-09T08:50:17.156Z" user="line-tofte">Auto (update-publication-status)</note>
                 <note type="updated" update="translation-status" value="2.e" date-time="2023-04-05T15:38:06.139Z" user="line-tofte">2.e</note>
                 <note type="updated" update="text-version" value="0.0.11" date-time="2023-04-05T15:38:06.139Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.12" date-time="2023-04-05T15:38:38.007Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.d" date-time="2023-04-17T08:49:10.327Z" user="line-tofte">2.d</note>
+                <note type="updated" update="text-version" value="0.0.13" date-time="2023-04-17T08:49:10.327Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
