--- a/translations/kangyur/placeholders/100-022_toh865-the_incantation_of_the_buddha_vairocana.xml
+++ b/translations/kangyur/placeholders/100-022_toh865-the_incantation_of_the_buddha_vairocana.xml
@@ -9,12 +9,13 @@
                 <title type="mainTitle" xml:lang="Bo-Ltn">sangs rgyas rnam par snang mdzad kyi gzungs/</title>
                 <author role="translatorMain" ref="eft:team-55"/>
                 <author role="translatorEng" ref="eft:person-61">Catherine Dalton</author>
+                <editor role="projectEditor" ref="eft:person-50">Andreas Doctor</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.4 <date>2022</date>
+                <edition>v 0.0.6 <date>2022</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.g">
+            <publicationStmt status="2.f">
                 <idno xml:id="UT22084-100-022"/>
                 <date/>
             </publicationStmt>
@@ -30,7 +31,17 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-03-23T14:31:25.103Z" user="admin">23/03/2023 14:31:25</note>    <note type="updated" update="translation-status" value="3" date-time="2022-04-13T12:54:57.88Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2022-04-13T12:54:57.88Z" user="line-tofte">0.0.1</note>    <note type="updated" update="text-version" value="0.0.2" date-time="2022-04-13T12:55:25.104Z" user="line-tofte">Auto (update-contributors)</note>    <note type="updated" update="translation-status" value="2.h" date-time="2022-06-16T10:30:43.83Z" user="line-tofte">2.h</note>    <note type="updated" update="text-version" value="0.0.3" date-time="2022-06-16T10:30:43.83Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="translation-status" value="2.g" date-time="2023-03-23T14:31:20.87Z" user="line-tofte">2.g</note>    <note type="updated" update="text-version" value="0.0.4" date-time="2023-03-23T14:31:20.87Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="lastUpdated" date-time="2023-04-17T10:16:04.547Z" user="admin">17/04/2023 10:16:04</note>
+                <note type="updated" update="translation-status" value="3" date-time="2022-04-13T12:54:57.88Z" user="line-tofte">3</note>
+                <note type="updated" update="text-version" value="0.0.1" date-time="2022-04-13T12:54:57.88Z" user="line-tofte">0.0.1</note>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2022-04-13T12:55:25.104Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.h" date-time="2022-06-16T10:30:43.83Z" user="line-tofte">2.h</note>
+                <note type="updated" update="text-version" value="0.0.3" date-time="2022-06-16T10:30:43.83Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="translation-status" value="2.g" date-time="2023-03-23T14:31:20.87Z" user="line-tofte">2.g</note>
+                <note type="updated" update="text-version" value="0.0.4" date-time="2023-03-23T14:31:20.87Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.5" date-time="2023-03-23T14:31:52.593Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.f" date-time="2023-04-17T10:16:00.353Z" user="line-tofte">2.f</note>
+                <note type="updated" update="text-version" value="0.0.6" date-time="2023-04-17T10:16:00.353Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
