--- a/translations/kangyur/translations/049-004_toh109-the_sutra_on_the_mountain_gayasirsa.xml
+++ b/translations/kangyur/translations/049-004_toh109-the_sutra_on_the_mountain_gayasirsa.xml
@@ -42,7 +42,7 @@
                                         Lindsay</editor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 1.0.3 <date>2023</date>
+                <edition>v 1.0.4 <date>2023</date>
                 </edition>
             </editionStmt>
                         <publicationStmt status="1.a">
@@ -84,7 +84,7 @@
                                 </bibl>
                         </sourceDesc>
                         <notesStmt>
-                                <note type="lastUpdated" date-time="2023-04-17T12:00:45.126Z" user="admin">17/04/2023 12:00:45</note>
+                                <note type="lastUpdated" date-time="2023-04-17T12:06:32.651Z" user="admin">17/04/2023 12:06:32</note>
                                 <note type="updated" update="text-version" value="v 0.1.0" date-time="2019-10-08T07:42:51.906Z" user="andreas">v
                                         0.1.0</note>
                                 <note type="updated" update="translation-status" value="2.f" date-time="2020-01-27T13:10:59.245Z" user="mike">2.f</note>
@@ -133,6 +133,7 @@
                             <note type="updated" update="text-version" value="1.0.1" date-time="2023-04-14T20:36:45.495Z" user="martina-cotter">Updated typo.</note>
                             <note type="updated" update="text-version" value="1.0.2" date-time="2023-04-14T21:14:25.982Z" user="konchog">Several minor fixes in notes.</note>
                             <note type="updated" update="text-version" value="1.0.3" date-time="2023-04-17T12:00:42.285Z" user="martina-cotter">updated notes.</note>
+                            <note type="updated" update="text-version" value="1.0.4" date-time="2023-04-17T12:06:29.797Z" user="martina-cotter">Updated note.</note>
                         </notesStmt>
                 </fileDesc>
         </teiHeader>
@@ -954,8 +955,8 @@
                                                   Edgerton 1953, s.v. “nyasana.” For some examples
                                                   of the lists that include some or all of these
                                                   terms in the Chinese translation of the <title xml:lang="Sa-Ltn">Yogācārabhūmi</title>, see
-                                                  Taishō 1579 289b3 (<title xml:lang="Sa-Ltn">Manobhūmi</title>), Taishō 1579 361b7 (<title xml:lang="Sa-Ltn">Śrutamayībhūmi</title>), Taishō
-                                                  1579 479b19–20, and Taishō 1579 528b9
+                                                          Taishō 1579 XXX 289b3 (<title xml:lang="Sa-Ltn">Manobhūmi</title>), Taishō 1579 XXX 361b7 (<title xml:lang="Sa-Ltn">Śrutamayībhūmi</title>), Taishō
+                                                          1579 XXX 479b19–20, and Taishō 1579 XXX 528b9
                                                   (<title xml:lang="Sa-Ltn">Bodhisattva­bhūmi</title>).</note> The giving
                                                 rise to the mind of awakening that is separated from
                                                 the goal by one birth should be viewed as like
