--- a/translations/kangyur/placeholders/087-011_toh505a,1059a-mantra_for_incanting_medicines.xml
+++ b/translations/kangyur/placeholders/087-011_toh505a,1059a-mantra_for_incanting_medicines.xml
@@ -12,10 +12,10 @@
                 <sponsor ref="sponsors.xml#sponsor-2">May, George, Likai and Lillian Gu</sponsor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.11 <date>2021</date>
+                <edition>v 0.0.12 <date>2021</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.f">
+            <publicationStmt status="2.e">
                 <idno xml:id="UT22084-087-011"/>
                 <date/>
             </publicationStmt>
@@ -41,7 +41,7 @@
             </sourceDesc>
             <notesStmt>
                 <note>Note: not identified in Toh.</note>
-                <note type="lastUpdated" date-time="2023-04-12T13:07:50.503Z" user="admin">12/04/2023 13:07:50</note>
+                <note type="lastUpdated" date-time="2023-04-18T11:09:08.242Z" user="admin">18/04/2023 11:09:08</note>
                 <note type="updated" update="translation-status" value="4" date-time="2021-01-12T15:49:02.772Z" user="line-tofte">4</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2021-01-12T15:49:02.772Z" user="line-tofte">0.0.1</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2021-01-14T10:25:08.293Z" user="line-tofte">Auto (update-sponsorship)</note>
@@ -56,6 +56,8 @@
                 <note type="updated" update="text-version" value="0.0.10" date-time="2023-03-23T14:43:03.889Z" user="line-tofte">Auto (update-contributors)</note>
                 <note type="updated" update="translation-status" value="2.f" date-time="2023-04-12T13:07:46.226Z" user="line-tofte">2.f</note>
                 <note type="updated" update="text-version" value="0.0.11" date-time="2023-04-12T13:07:46.226Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="translation-status" value="2.e" date-time="2023-04-18T11:09:03.906Z" user="line-tofte">2.e</note>
+                <note type="updated" update="text-version" value="0.0.12" date-time="2023-04-18T11:09:03.906Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
