--- a/translations/kangyur/placeholders/101-114_toh1059-mantra_for_enchanting_medicines_extracted_from_destroyer_of_the_great_trichiliocosm.xml
+++ b/translations/kangyur/placeholders/101-114_toh1059-mantra_for_enchanting_medicines_extracted_from_destroyer_of_the_great_trichiliocosm.xml
@@ -12,10 +12,10 @@
                 <editor role="projectEditor" ref="eft:person-50">Andreas Doctor</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.6 <date>2022</date>
+                <edition>v 0.0.7 <date>2022</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.f">
+            <publicationStmt status="2.e">
                 <idno xml:id="UT22084-101-114"/>
                 <date/>
             </publicationStmt>
@@ -31,7 +31,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-04-12T13:06:16.458Z" user="admin">12/04/2023 13:06:16</note>
+                <note type="lastUpdated" date-time="2023-04-18T11:10:34.295Z" user="admin">18/04/2023 11:10:34</note>
                 <note type="updated" update="translation-status" value="3" date-time="2022-04-13T12:59:27.641Z" user="line-tofte">3</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2022-04-13T12:59:27.641Z" user="line-tofte">0.0.1</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2022-04-13T12:59:51.087Z" user="line-tofte">Auto (update-contributors)</note>
@@ -42,6 +42,8 @@
                 <note type="updated" update="text-version" value="0.0.5" date-time="2023-03-23T14:34:56.177Z" user="line-tofte">Auto (update-contributors)</note>
                 <note type="updated" update="translation-status" value="2.f" date-time="2023-04-12T13:06:12.19Z" user="line-tofte">2.f</note>
                 <note type="updated" update="text-version" value="0.0.6" date-time="2023-04-12T13:06:12.19Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="translation-status" value="2.e" date-time="2023-04-18T11:10:30.033Z" user="line-tofte">2.e</note>
+                <note type="updated" update="text-version" value="0.0.7" date-time="2023-04-18T11:10:30.033Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
