--- a/translations/kangyur/translations/044-004_toh84-the_sutra_of_the_girl_vimalasraddhas_questions.xml
+++ b/translations/kangyur/translations/044-004_toh84-the_sutra_of_the_girl_vimalasraddhas_questions.xml
@@ -28,7 +28,7 @@
                 <editor role="finalReviewer" ref="contributors.xml#person-139">John Canti</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.8 <date>2022</date>
+                <edition>v 1.0.9 <date>2023</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="1">
@@ -61,7 +61,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-01-18T14:36:30.077Z" user="celso">18/01/2023 14:36:30</note>
+                <note type="lastUpdated" date-time="2023-04-19T12:19:05.205Z" user="admin">19/04/2023 12:19:05</note>
                 <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version
                     increment</note>
                 <note type="updated" update="translation-status" value="2.d" date-time="2020-01-28T06:11:33.474Z" user="mike">2.d</note>
@@ -124,7 +124,7 @@
     <note type="updated" update="text-version" value="1.0.1" date-time="2021-04-09T14:42:49.896Z" user="john">Superfluous English mentions in Chinese fields of the glossary removed.</note>
     <note type="updated" update="text-version" value="1.0.2" date-time="2021-04-09T15:05:23.628Z" user="john">Added a sentence to Introduction.</note>
     <note type="updated" update="text-version" value="1.0.3" date-time="2021-04-20T10:18:59.048Z" user="john">Removed mention in summary of n longer being reborn as a female.</note>
-    <note type="updated" update="text-version" value="1.0.4" date-time="2021-09-09T18:34:35.493Z" user="celso">activated pending links </note>    <note type="updated" update="text-version" value="1.0.5" date-time="2022-03-02T18:21:36.617Z" user="celso">removed a glossary entry with no  location. recached to fix note on dist.</note>    <note type="updated" update="text-version" value="1.0.6" date-time="2022-07-10T18:32:02.374Z" user="john">Harmonization of trailer and colophon</note>    <note type="updated" update="text-version" value="1.0.7" date-time="2022-07-25T15:40:53.95Z" user="martina-cotter">Added pending links.</note>    <note type="updated" update="text-version" value="1.0.8" date-time="2023-01-16T16:46:32.505Z" user="celso">Auto (script-increment-version-published)</note>
+    <note type="updated" update="text-version" value="1.0.4" date-time="2021-09-09T18:34:35.493Z" user="celso">activated pending links </note>    <note type="updated" update="text-version" value="1.0.5" date-time="2022-03-02T18:21:36.617Z" user="celso">removed a glossary entry with no  location. recached to fix note on dist.</note>    <note type="updated" update="text-version" value="1.0.6" date-time="2022-07-10T18:32:02.374Z" user="john">Harmonization of trailer and colophon</note>    <note type="updated" update="text-version" value="1.0.7" date-time="2022-07-25T15:40:53.95Z" user="martina-cotter">Added pending links.</note>    <note type="updated" update="text-version" value="1.0.8" date-time="2023-01-16T16:46:32.505Z" user="celso">Auto (script-increment-version-published)</note>    <note type="updated" update="text-version" value="1.0.9" date-time="2023-04-19T12:19:02.372Z" user="celso">Corrected @type values for Skt. attestation to match the new code in the schema.</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
@@ -1846,7 +1846,7 @@
                             <term xml:lang="zh">令信樂</term>
                             <term xml:lang="Bo-Ltn">mos byed </term>
                             <term xml:lang="bo">མོས་བྱེད།</term>
-                            <term xml:lang="Sa-Ltn" type="semanticReconstruction">adhimuktika</term>
+                            <term xml:lang="Sa-Ltn" type="reconstructedSemantic">adhimuktika</term>
                             <term type="definition">“The Dedicated One.” One of the bodhisattvas in the entourage of the Buddha Śākyamuni when he
                                 taught the girl Vimalaśraddhā. </term>
                         </gloss>
@@ -1868,7 +1868,7 @@
                             <term xml:lang="zh">妙色莊嚴 </term>
                             <term xml:lang="Bo-Ltn">gzugs mdzes bkod pa </term>
                             <term xml:lang="bo">གཟུགས་མཛེས་བཀོད་པ།</term>
-                            <term xml:lang="Sa-Ltn" type="semanticReconstruction">surūpavyūha</term>
+                            <term xml:lang="Sa-Ltn" type="reconstructedSemantic">surūpavyūha</term>
                             <term type="definition">“Beautiful Array.” One of the bodhisattvas in the entourage of the Buddha Śākyamuni when he taught
                                 the girl Vimalaśraddhā.</term>
                         </gloss>
@@ -1912,7 +1912,7 @@
                             <term xml:lang="zh">寶思</term>
                             <term xml:lang="Bo-Ltn">rin chen sems pa </term>
                             <term xml:lang="bo">རིན་ཆེན་སེམས་པ།</term>
-                            <term xml:lang="Sa-Ltn" type="semanticReconstruction">ratnacinta</term>
+                            <term xml:lang="Sa-Ltn" type="reconstructedSemantic">ratnacinta</term>
                             <term type="definition">“Mind of Jewels.” One of the bodhisattvas in the entourage of the Buddha Śākyamuni when he taught
                                 the girl Vimalaśraddhā. </term>
                         </gloss>
@@ -2010,7 +2010,7 @@
                             <term xml:lang="zh">持道</term>
                             <term xml:lang="Bo-Ltn">lam ’dzin pa </term>
                             <term xml:lang="bo">ལམ་འཛིན་པ།</term>
-                            <term xml:lang="Sa-Ltn" type="semanticReconstruction">mārgadhara</term>
+                            <term xml:lang="Sa-Ltn" type="reconstructedSemantic">mārgadhara</term>
                             <term type="definition">“Path Bearer.” One of the bodhisattvas in the entourage of the Buddha Śākyamuni when he taught the
                                 girl Vimalaśraddhā. </term>
                         </gloss>
@@ -2150,7 +2150,7 @@
                             <term xml:lang="zh">電光世界 </term>
                             <term xml:lang="Bo-Ltn">glog gi ’od </term>
                             <term xml:lang="bo">གློག་གི་འོད།</term>
-                            <term xml:lang="Sa-Ltn" type="semanticReconstruction">vidyutprabha</term>
+                            <term xml:lang="Sa-Ltn" type="reconstructedSemantic">vidyutprabha</term>
                             <term type="definition">“Light of Lightning.” Name of the universe where, according to the Buddha Śākyamuni’s prophecy,
                                 the girl Vimalaśraddhā will finally reach full enlightenment under the name of the Thus-Gone One Raśmivyūha.</term>
                         </gloss>
