--- a/translations/kangyur/translations/047-001_toh99_infinite_certainty.xml
+++ b/translations/kangyur/translations/047-001_toh99_infinite_certainty.xml
@@ -29,7 +29,7 @@
                 <editor role="finalReviewer" ref="contributors.xml#person-139">John Canti</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.26.19 <date>2022</date>
+                <edition>v 1.26.20 <date>2023</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="1">
@@ -61,7 +61,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-01-18T17:04:53.012Z" user="celso">18/01/2023 17:04:53</note>
+                <note type="lastUpdated" date-time="2023-04-19T12:35:15.436Z" user="admin">19/04/2023 12:35:15</note>
                 <note type="updated" update="text-version" value="v 0.1" date-time="2019-04-12T09:21:07.305Z" user="john">v 0.1 2019</note>
                 <note type="updated" update="translation-status" value="2" date-time="2019-04-12T09:21:07.305Z" user="john">2</note>
                 <note type="updated" update="text-version" value="v 0.2" date-time="2019-04-12T09:23:33.05Z" user="john">v 0.2 2019</note>
@@ -107,6 +107,7 @@
                 <note type="updated" update="text-version" value="1.26.17" date-time="2022-06-27T10:06:48.1Z" user="admin">Auto (script-increment-version-published)</note>
                 <note type="updated" update="text-version" value="1.26.18" date-time="2023-01-06T11:08:14.976Z" user="cabie-sim">Auto (update-titles)</note>
                 <note type="updated" update="text-version" value="1.26.19" date-time="2023-01-18T16:58:06.914Z" user="celso">Auto (remove-tid-from-back-list-items)</note>
+                <note type="updated" update="text-version" value="1.26.20" date-time="2023-04-19T12:35:12.424Z" user="celso">Corrected @type values for Skt. attestation to match the new code in the schema.</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
@@ -15990,7 +15991,7 @@
                             <term>Vimalanetra</term>
                             <term xml:lang="Bo-Ltn">dri med spyan </term>
                             <term xml:lang="bo">དྲི་མེད་སྤྱན།</term>
-                            <term xml:lang="Sa-Ltn" type="semanticReconstruction">Vimalanetra</term>
+                            <term xml:lang="Sa-Ltn" type="reconstructedSemantic">Vimalanetra</term>
                             <term type="definition">Name of a buddha.</term>
                         </gloss>
                     </item>
@@ -18570,7 +18571,7 @@
                             <term>Transcending Virtue</term>
                             <term xml:lang="Bo-Ltn">dge ba’i pha rol ’gro </term>
                             <term xml:lang="bo">དགེ་བའི་ཕ་རོལ་འགྲོ།</term>
-                            <term xml:lang="Sa-Ltn" type="semanticReconstruction">śubhapāraṃgama</term>
+                            <term xml:lang="Sa-Ltn" type="reconstructedSemantic">śubhapāraṃgama</term>
                             <term type="definition">The city where the temple mentioned in this text is being built. Possibly to be identified with
                                 the southern city Śubhapāraṃgama in the <title xml:lang="Sa-Ltn">Gaṇḍavyūha</title> (see note <ptr target="#UT22084-047-001-2366"/>).</term>
                         </gloss>
